--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,4 +1,10 @@
 h1 Welcome#index
 p Find me in app/views/welcome/index.html.slim
 
-= button_to 'Login', '/auth/auth0', method: :post, data: {turbo: false}
+/ = button_to 'Login', '/auth/auth0', method: :post, data: {turbo: false}
+
+= form_with url: "/test_session", method: :post do |f|
+  = f.label :email, 'Email'
+  = f.text_field :email, class: 'form-control'
+  = f.submit 'Sign Up', class: 'btn btn-primary'
+
